# Atlas_ROS2

./: .gitignore  LICENSE  README.md
fs_ros2_ws/src/formula_carla_bridge/: package.xml  setup.cfg  setup.py
fs_ros2_ws/src/formula_perception/: package.xml  setup.cfg  setup.py
fs_ros2_ws/src/formula_rviz_config/: CMakeLists.txt  package.xml
fs_ros2_ws/src/lidar_cluster/: package.xml  setup.py
fs_ros2_ws/src/lidar_cluster/config/: lidar_cluster.yaml
fs_ros2_ws/src/lidar_cluster/launch/: lidar_cluster.launch.py
fs_ros2_ws/src/lidar_cluster/lidar_cluster/: __init__.py  lidar_cluster.py  lidar_cluster_node.py
